# cmake_for_stm32

./: .gitignore  LICENSE  README.md
example/: Makefile  example.ioc
example/Core/Src/: gpio.c  main.c  usart.c
examples/STM32F042K6T/: .mxproject  CMakeLists.txt
examples/STM32F042K6T/BSP/: CMakeLists.txt
